<resources>
    <string name="app_name">Tour Me</string>
    <string name="Entertainment">Entertainment</string>
    <string name="Resturants">Restaurants</string>
    <string name="Historical">Historical</string>
    <string name="Resorts">Resorts</string>
    <string name="dream_park">Dream Park</string>
    <string name="al_azhar_park">Al Azhar Park</string>
    <string name="adrenalin_paintball">Adrenalin Paintball</string>
    <string name="el_reef_el_araby">El Reef El Araby</string>
    <string name="africa_safari_park">Africa Safari Park</string>
    <string name="giza_zoo">Giza Zoo</string>
    <string name="hinthunt">Hint Hunt</string>
    <string name="mindmaze">Mind Maze</string>
    <string name="escape_room_egypt">Escape Room Egypt</string>
    <string name="genena_mall">Genena Mall</string>
    <string name="al_khal">Al Khal</string>
    <string name="entrecote_steak_house">Entrecote Steak House</string>
    <string name="holmes_burgers">Holmes Burgers</string>
    <string name="Sabaya">Sabaya</string>
    <string name="Potasta">Potasta</string>
    <string name="pizza_roma">Pizza Roma</string>
    <string name="la_fleur">La Fleur</string>
    <string name="ll_frantoio">Ll Frantoio</string>
    <string name="shark_resturant">Shark Resturant</string>
    <string name="the_lantern_room">The Lantern Room</string>
    <string name="pyramids_of_giza">Pyramids Of Giza</string>
    <string name="luxor_temple">Luxor Temple</string>
    <string name="qaitbay_citadel">Qaitbay Citadel</string>
    <string name="memphis">Memphis</string>
    <string name="valley_of_the_kings">Valley Of The Kings</string>
    <string name="sakkara_pyramid">Sakkara Pyramid</string>
    <string name="temple_of_philae">Temple Of Philae</string>
    <string name="temple_of_karnak">Temple Of Karnak</string>
    <string name="pompey_pillar">Pompey Pillar</string>
    <string name="catacombs_of_kom_el_shoqafa">Catacombs Of Kom El Shoqafa</string>
    <string name="desert_rose_resort">Desert Rose</string>
    <string name="movenpick_resort">Movenpick</string>
    <string name="old_palace_resort">Old Palace</string>
    <string name="sheraton_miramar_resort">Sheraton Miramar</string>
    <string name="three_corners_rihana_resort">Three Corners Rihana</string>
    <string name="the_grand_resort_hurghada">The Grand Resort</string>
    <string name="sultan_gardens_resort">Sultan Gardens</string>
    <string name="four_seasons_resort">Four Seasons</string>
    <string name="delta_sharm_resort">Delta Sharm</string>
    <string name="baron_resort">Baron Resort</string>
    <string name="info">Info</string>
    <string name="location">Location</string>
    <string name="title_activity_map">Map</string>
    <string name="Sabaya_Restaurant_Info">\n<b>Average Prices:</b> EGP 452 - EGP 1,810\n\n<b>Good for:</b> Large groups, Local cuisine, Special occasions, Romantic, Business meetings, Families with children\n\n<b>Meals:</b> Lunch, Brunch, Dinner\n\n<b>Cuisine:</b> Lebanese, Mediterranean, Middle Eastern, Vegetarian Friendly, Vegan Options, Halal, Gluten Free Options</string>
    <string name="AlKhal_Restaurant_Info">\n<b>Good for:</b> Large groups, Local cuisine, Special occasions, Romantic, Business meetings, Families with children\n\n<b>Meals:</b> Lunch, Brunch, Dinner\n\n<b>Cuisine:</b> Middle Eastern, Egyptian, Arabic, Vegetarian Friendly, Vegan Options, Halal, Gluten Free Options</string>
    <string name="HolmesBurgers_Restaurant_Info">\n<b>Good for:</b> Families with children\n\n<b>Cuisine:</b> International</string>
    <string name="Potasta_Restaurant_Info">\n<b>Average Prices:</b> EGP 36\n\n<b>Cuisine:</b> Healthy, Italian, Mediterranean</string>
    <string name="Il_Frantoio_Restaurant_Info">\n<b>Good for:</b> Romantic, Business meetings\n\n<b>Meals:</b> Dinner\n\n<b>Cuisine:</b> Italian, Mediterranean, European, Vegetarian Friendly</string>
    <string name="LaFleur_Restaurant_Info">\n<b>Good for:</b> Romantic, Business meetings\n\n<b>Meals:</b> Dinner, Late Night\n\n<b>Cuisine:</b> French, European, Vegetarian Friendly</string>
    <string name="EntrecoteSteakHouse_Restaurant_Info">\n<b>Average Prices:</b> EGP 181 - EGP 1,086\n\n<b>Good for:</b> Romantic, Large groups, Special occasions, Families with children\n\n<b>Meals:</b> Dinner, Late Night\n\n<b>Cuisine:</b> Steakhouse, French, European</string>
    <string name="TheLanternRoom_Restaurant_Info">\n<b>Good for:</b> Large groups, Romantic, Business meetings, Kids, Families with children, Special occasions, Local cuisine\n\n<b>Meals:</b> Dinner, Late Night\n\n<b>Cuisine:</b> Mediterranean, European, British, Soups, Egyptian, Vegetarian Friendly, Vegan Options</string>
    <string name="PizzaRoma_Restaurant_Info">\n<b>Average Prices:</b> EGP 127\n\n<b>Good for:</b> Special occasions, Kids, Families with children, Large groups\n\n<b>Meals:</b> Lunch, Dinner, Brunch, Late Night\n\n<b>Cuisine:</b> Italian, Pizza, Mediterranean, Vegetarian Friendly, Halal, Vegan Options</string>
    <string name="Shark_Restaurant_Info">\n<b>Good for:</b> Kids, Large groups, Families with children, Scenic view, Local cuisine, Special occasions, Romantic\n\n<b>Meals:</b> Brunch, Breakfast, Lunch, Dinner, Late Night\n\n<b>Cuisine:</b> Seafood, Mediterranean, Middle Eastern, Soups, Egyptian, International, Vegetarian Friendly, Halal, Vegan Options, Gluten Free Options</string>
    <string name="Baron_Resort_Info">\n<b>Price Range:</b> EGP 670 - EGP 1,900\n\n<b>Resort Class:</b> 5 Stars\n\n<b>Room Types:</b> Suites ,Non-Smoking Rooms ,Family Rooms\n\n<b>Number Of Rooms:</b> 360</string>
    <string name="SultanGardens_Resort_Info">\n<b>Price Range:</b> EGP 579 - EGP 2,009\n\n<b>Resort Class:</b> 5 Stars\n\n<b>Room Types:</b> Suites ,Family Rooms ,Smoking rooms available ,Accessible rooms ,Non-Smoking Rooms\n\n<b>Number Of Rooms:</b> 520</string>
    <string name="DesertRose_Resort_Info">\n<b>Price Range:</b> EGP 688 - EGP 3,474\n\n<b>Resort Class:</b> 5 Stars\n\n<b>Room Types:</b> Suites ,Non-Smoking Rooms ,Family Rooms ,Smoking rooms available ,Accessible rooms\n\n<b>Number Of Rooms:</b> 912</string>
    <string name="TheGrand_Resort_Info">\n<b>Price Range:</b> EGP 995 - EGP 1,936\n\n<b>Room Types:</b> Suites ,Family Rooms\n\n<b>Number Of Rooms:</b> 828</string>
    <string name="FourSeasons_Resort_Info">\n<b>Price Range:</b> EGP 4,831 - EGP 8,939\n\n<b>Resort Class:</b> 5 Stars\n\n<b>Room Types:</b> Suites ,Non-Smoking Rooms ,Family Rooms\n\n<b>Number Of Rooms:</b> 136</string>
    <string name="DeltaSharm_Resort_Info">\n<b>Price Range:</b> EGP 271 - EGP 706\n\n<b>Resort Class:</b> 4 Stars\n\n<b>Room Types:</b> Kitchenette ,Suites ,Non-Smoking Rooms ,Family Rooms\n\n<b>Number Of Rooms:</b> 600</string>
    <string name="OldPalace_Resort_Info">\n<b>Price Range:</b> EGP 832 - EGP 2,859\n\n<b>Resort Class:</b> 4 Stars\n\n<b>Room Types:</b> Suites ,Family Rooms ,Smoking rooms available ,Accessible rooms ,Non-Smoking Rooms\n\n<b>Number Of Rooms:</b> 292</string>
    <string name="SheratonMiramar_Resort_Info">\n<b>Price Range:</b> EGP 1,050 - EGP 3,510\n\n<b>Resort Class:</b> 5 Stars\n\n<b>Room Types:</b> Suites ,Non-Smoking Rooms ,Family Rooms ,Smoking rooms available\n\n<b>Number Of Rooms:</b> 338</string>
    <string name="Movenpick_Resort_Info">\n<b>Price Range:</b> EGP 1,285 - EGP 3,438\n\n<b>Resort Class:</b> 5 Stars\n\n<b>Room Types:</b> Suites ,Non-Smoking Rooms ,Family Rooms\n\n<b>Number Of Rooms:</b> 420</string>
    <string name="ThreeCornersRihana_Resort_Info">\n<b>Price Range:</b> EGP EGP 670 - EGP 1,466\n\n<b>Resort Class:</b> 4 Stars\n\n<b>Room Types:</b> Non-Smoking Rooms ,Family Rooms ,Suites\n\n<b>Number Of Rooms:</b> 268</string>
    <string name="Memphis_HistoricalSite_Info">\n<b>Overview:</b> Memphis, founded around 3,100 BC, is the legendary city of Menes, the King who united Upper and Lower Egypt. Early on, Memphis was more likely a fortress from which Menes controlled the land and water routes between Upper Egypt and the Delta. Having probably originated in Upper Egypt, from Memphis he could control the conquered people of Lower Egypt. However, by the Third Dynasty, the building at Saqqara suggests that Memphis had become a sizable city</string>
    <string name="TempleOfKarnak_HistoricalSite_Info">\n<b>Overview:</b> Karnak is the modern-day name for the ancient site of the Temple of Amun at Thebes, Egypt. The Egyptians called the site Nesut-Towi, "Throne of the Two Lands", Ipet-Iset, "The Finest of Seats" as well as Ipt-Swt, "Selected Spot" (also given as Ipetsut, "The Most Select of Places"). The original name has to do with the ancient Egyptian belief that Thebes was the first city founded on the primordial mound which rose from the waters of chaos at the beginning of the world. At that time, the creator-god Atum (sometimes Ptah) stood on the mound to begin the work of creation. The site of the temple was thought to be this original ground and the temple was raised at this spot for that reason. Karnak is believed to have been an ancient observatory as well as a place of worship where the god Amun would interact directly with the people of earth</string>
    <string name="FortQaitbey_HistoricalSite_Info">\n<b>Overview:</b> Sultan Qaitbey built this picturesque fortress during the 14th century to defend Alexandria from the advances of the Ottoman Empire. His efforts were in vain since the Ottomans took control of Egypt in 1512, but the fortress has remained, strategically located on a thin arm of land that extends out into Alexandria’s harbor from the corniche</string>
    <string name="PompeysPillar_HistoricalSite_Info">\n<b>Overview:</b> Its name is misleading. This single column standing on a rocky hilltop in the middle of Alexandria has nothing to do with the Roman Consul and General Gaius Pompey who was Julius Caesar’s rival in a civil war and was murdered by a Ptolomaic pharaoh in 48 BC when he fled to Alexandria.This legend was started by Crusaders, who thought the 100-foot (30 meter) red Aswan granite pillar marked his burial site. The pillar is instead the a triumphal monument erected around 300 AD for the Roman Emperor Diocletian, but the true significance of this archeological site is what stood here before the pillar.It is the site of the Serapeum, Alexandria’s acropolis</string>
    <string name="CatacombsOfKomElShoqafa_HistoricalSite_Info">\n<b>Overview:</b> Situated just to the west of Pompys Pillar, the Catacombs of Kom El Shuqafa is the largest and most important burial site dating back to the Greco Roman period in Egypt.Kom El Shuqafa, meaning the hill of treasures in the Arabic language, was unearthed by coincidence in the beginning of the 20th century.Being the most important Greco Roman necropolis in Egypt, the Catacombs of Kom El Shuqafa have a mixture of Roman, Hellenistic, Pharaonic, and ancient Egyptian decorative art, elements that were common at this period in Alexandria.Dating back to the 2nd century AD, this necropolis was dug inside the rock to a depth of 35 meters, 115 feet, and it consists of three levels, all located under the ground level. However, due to the flooding that occurred in this area, the lowest level in now inaccessible</string>
    <string name="contact_us">Contact Us</string>
    <string name="show_map_location">Show Map Location</string>
    <string name="tour_info_text_test">The Tour Info</string>
</resources>