<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tourme.InfoActivity"
    tools:ignore="ContentDescription">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView style="@style/CardViewCustomStyle">

                <LinearLayout style="@style/LinearLayoutCustomStyle">

                    <TextView
                        style="@style/TitleTextCustomStyle"
                        android:text="@string/info" />

                    <TextView
                        android:id="@+id/info_card"
                        style="@style/InnerTextCustomStyle"
                        tools:text="@string/tour_info_text_test" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView style="@style/CardViewCustomStyle">

                <LinearLayout style="@style/LinearLayoutCustomStyle">

                    <TextView
                        style="@style/TitleTextCustomStyle"
                        android:text="@string/location" />

                    <TextView
                        android:id="@+id/location_card"
                        style="@style/InnerTextCustomStyle"
                        tools:text="The Tour Location" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView style="@style/CardViewCustomStyle">

                <LinearLayout style="@style/LinearLayoutCustomStyle">

                    <TextView
                        style="@style/TitleTextCustomStyle"
                        android:text="@string/contact_us" />

                    <TextView
                        android:id="@+id/ContactInfo_card"
                        style="@style/InnerTextCustomStyle"
                        tools:text="The Contact Info" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/LocationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/show_map_location" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/CollapsingToolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/darker_gray"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/CollapsingImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>
